# HMD

./: Cargo.toml  Readme.md  package.json  tauri.conf.json  update-tauri-version.js
.github/workflows/: release.yml
capabilities/: default.json
icons/: icon.icns
src/: lib.rs
ui/: index.html  renderer.js  style.css
